provarAnt/00D1b0000000d5bEAA/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Days_Since_Last_Email__c</fullName>
        <description>This field is only for ATG Business Admin and System Admin purposes/use.  It is not visible to other users.</description>
        <formula>TODAY() -  Last_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_In_Person__c</fullName>
        <description>field to capture the number of days since the Last In Person Visit</description>
        <formula>TODAY() -  Last_In_Person__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last In Person</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Inbound_Call__c</fullName>
        <description>This field is only for ATG Business Admin and System Admin purposes/use.  It is not visible to other users.</description>
        <formula>TODAY() - Last_Inbound_Call__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Inbound Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Online_Meeting__c</fullName>
        <description>This field is only for ATG Business Admin and System Admin purposes/use.  It is not visible to other users.</description>
        <formula>TODAY() -  Last_Online_Meeting__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Online Meeting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Outbound_Call__c</fullName>
        <formula>(TODAY() - Last_Outbound_Call__c) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Outbound Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Service__c</fullName>
        <description>This field is only for ATG Business Admin and System Admin purposes/use.  It is not visible to other users.</description>
        <formula>TODAY() - Last_Service__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Task__c</fullName>
        <description>This field is only for ATG Business Admin and System Admin purposes/use.  It is not visible to other users.</description>
        <formula>TODAY() - Last_Task__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Task</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Code__c</fullName>
        <description>Haystak field</description>
        <label>Dealer Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Group_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Group Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Dealer Group Account)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Nameplates__c</fullName>
        <description>Picklist to select the OEM names that the Dealer has.</description>
        <inlineHelpText>Select the OEM names that the Dealer has</inlineHelpText>
        <label>Dealer Nameplates</label>
        <picklist>
            <controllingField>Dealer_Type__c</controllingField>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bugatti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harley-Davidson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hummer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamborghini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Rover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lincoln</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Type__c</fullName>
        <description>Used to determine whether the account is Independent or Franchise.</description>
        <label>Dealer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_is_part_of_a_dealer_group__c</fullName>
        <label>Dealer is part of a dealer group?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <description>Used to determine which district the account is listed in within its region.</description>
        <label>District</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>haystak field</description>
        <label>Email Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>haystack field</description>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_for_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>updated by the integration system with the results from a SVOC request.  If the unverified prospect account already exists as a primary or secondary this box will be checked. Workflow will trigger a task to the admin to merge tertiary data</description>
        <inlineHelpText>updated by the integration system with the results from a SVOC request</inlineHelpText>
        <label>Flag for Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geographical_Location__c</fullName>
        <label>Geographical Location</label>
        <picklist>
            <picklistValues>
                <fullName>Rural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urban</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <description>Placeholder for import.</description>
        <inlineHelpText>Placeholder for import.</inlineHelpText>
        <label>Group Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HayStak_Dealer_Id__c</fullName>
        <description>Used by: HayStak</description>
        <label>HayStak Dealer Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Haystak_Flair__c</fullName>
        <description>Formula used to display flair image for BU as Active, Former, or Prospect.</description>
        <formula>CASE( Haystak_Status__c , 
&quot;Active&quot;, IMAGE(&quot;/resource/Flair_Logos/Haystak_Active.png&quot;, &quot;Haystak Active&quot;), 
&quot;Former&quot;, IMAGE(&quot;/resource/Flair_Logos/Haystak_Former.png&quot;, &quot;Haystak Former&quot;), 
&quot;Prospect&quot;,IMAGE(&quot;/resource/Flair_Logos/Haystak_Prospect.png&quot;, &quot;Haystak Prospect&quot;), 
&quot;/s.gif&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Haystak Flair</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Haystak_Spend__c</fullName>
        <description>System calculated field - looks at the ATG Product library and totals the product spend based on the BU name and product status.</description>
        <inlineHelpText>System calculated field - looks at the ATG Product library and totals the product spend based on the BU name and product status.</inlineHelpText>
        <label>Haystak Spend</label>
        <summarizedField>ATG_Product__c.Spend__c</summarizedField>
        <summaryFilterItems>
            <field>ATG_Product__c.Business_Unit__c</field>
            <operation>equals</operation>
            <value>Haystak</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ATG_Product__c.Product_Status__c</field>
            <operation>equals</operation>
            <value>Active, Pending, Delivered</value>
        </summaryFilterItems>
        <summaryForeignKey>ATG_Product__c.Dealer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Haystak_Status__c</fullName>
        <description>Field is updated by the system based on the product status in the ATG Product library.</description>
        <inlineHelpText>Field is updated by the system based on the product status in the ATG Product library.</inlineHelpText>
        <label>Haystak Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Haystak_Total_Product_Count__c</fullName>
        <description>Calculates the number of active Haystak products.</description>
        <label>Haystak Total Product Count</label>
        <summarizedField>ATG_Product__c.Product_Status_Value__c</summarizedField>
        <summaryFilterItems>
            <field>ATG_Product__c.Business_Unit__c</field>
            <operation>equals</operation>
            <value>Haystak</value>
        </summaryFilterItems>
        <summaryForeignKey>ATG_Product__c.Dealer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Haystak_UA_Code__c</fullName>
        <description>Haystak</description>
        <label>Haystak UA Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeNet_Dealer_Id__c</fullName>
        <description>HomeNet Account ID. This field should be an external ID when more are added to this SFDC org.</description>
        <label>HomeNet Dealer Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeNet_Flair__c</fullName>
        <description>Formula used to display flair image for BU as Active, Former, or Prospect.</description>
        <formula>CASE( HomeNet_Status__c , 
&quot;Active&quot;, IMAGE(&quot;/resource/Flair_Logos/HomeNet_Active.png&quot;, &quot;HomeNet Active&quot;), 
&quot;Former&quot;, IMAGE(&quot;/resource/Flair_Logos/HomeNet_Former.png&quot;, &quot;HomeNet Former&quot;), 
&quot;Prospect&quot;,IMAGE(&quot;/resource/Flair_Logos/HomeNet_Prospect.png&quot;, &quot;HomeNet Prospect&quot;), 
&quot;/s.gif&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HomeNet Flair</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeNet_Spend__c</fullName>
        <description>System calculated field - looks at the ATG Product library and totals the product spend based on the BU name and product status.</description>
        <inlineHelpText>System calculated field - looks at the ATG Product library and totals the product spend based on the BU name and product status.</inlineHelpText>
        <label>HomeNet Spend</label>
        <summarizedField>ATG_Product__c.Spend__c</summarizedField>
        <summaryFilterItems>
            <field>ATG_Product__c.Business_Unit__c</field>
            <operation>equals</operation>
            <value>HomeNet</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ATG_Product__c.Product_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>ATG_Product__c.Dealer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>HomeNet_Status__c</fullName>
        <description>Field is updated by the system based on the product status in the ATG Product library.</description>
        <inlineHelpText>Field is updated by the system based on the product status in the ATG Product library.</inlineHelpText>
        <label>HomeNet Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HomeNet_Total_Product_Count__c</fullName>
        <description>Calculates the number of active HomeNet products.</description>
        <label>HomeNet Total Product Count</label>
        <summarizedField>ATG_Product__c.Product_Status_Value__c</summarizedField>
        <summaryFilterItems>
            <field>ATG_Product__c.Business_Unit__c</field>
            <operation>equals</operation>
            <value>HomeNet</value>
        </summaryFilterItems>
        <summaryForeignKey>ATG_Product__c.Dealer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ILM_Contract_End_Date__c</fullName>
        <description>Manually updated field to determine the account&apos;s ILM contract end date.</description>
        <label>ILM Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ILM__c</fullName>
        <description>Picklist to determine which ILM the account is using, if any.</description>
        <label>ILM</label>
        <picklist>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aeros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoAccelerator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoBase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoBytel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Jockey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoRevo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVV - Web Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C.Q. Voices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Doone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete Dealer Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Manager - Reynolds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer/Mate(div of Auto/Mate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Car Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Peak</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <description>haystak field</description>
        <label>IP Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Index_Bucket__c</fullName>
        <label>Index Bucket</label>
        <picklist>
            <picklistValues>
                <fullName>Bucket 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bucket 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bucket 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bucket 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KBB_Flair__c</fullName>
        <description>Formula used to display flair image for BU as Active, Former, or Prospect.</description>
        <formula>CASE( KBB_Status__c , 
&quot;Active&quot;, IMAGE(&quot;/resource/Flair_Logos/KBB_Active.png&quot;, &quot;KBB Active&quot;), 
&quot;Former&quot;, IMAGE(&quot;/resource/Flair_Logos/KBB_Former.png&quot;, &quot;KBB Former&quot;), 
&quot;Prospect&quot;,IMAGE(&quot;/resource/Flair_Logos/KBB_Prospect.png&quot;, &quot;KBB Prospect&quot;), 
&quot;/s.gif&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KBB Flair</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KBB_Spend__c</fullName>
        <description>System calculated field - looks at the ATG Product library and totals the product spend based on the BU name and product status.</description>
        <inlineHelpText>System calculated field - looks at the ATG Product library and totals the product spend based on the BU name and product status.</inlineHelpText>
        <label>KBB Spend</label>
        <summarizedField>ATG_Product__c.Spend__c</summarizedField>
        <summaryFilterItems>
            <field>ATG_Product__c.Business_Unit__c</field>
            <operation>equals</operation>
            <value>KBB</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ATG_Product__c.Product_Status__c</field>
            <operation>equals</operation>
            <value>Active, Delivered</value>
        </summaryFilterItems>
        <summaryForeignKey>ATG_Product__c.Dealer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KBB_Status__c</fullName>
        <description>Field is updated by the system based on the product status in the ATG Product library.</description>
        <inlineHelpText>Field is updated by the system based on the product status in the ATG Product library.</inlineHelpText>
        <label>KBB Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KBB_Total_Product_Count__c</fullName>
        <description>Calculates the number of active KBB products.</description>
        <label>KBB Total Product Count</label>
        <summarizedField>ATG_Product__c.Product_Status_Value__c</summarizedField>
        <summaryFilterItems>
            <field>ATG_Product__c.Product_Name__c</field>
            <operation>startsWith</operation>
            <value>KBB</value>
        </summaryFilterItems>
        <summaryForeignKey>ATG_Product__c.Dealer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Kenshoo_Profile__c</fullName>
        <description>Haystak</description>
        <label>Kenshoo Profile #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kenshoo_Tracking_Id__c</fullName>
        <description>Haystak field.</description>
        <label>Kenshoo Tracking Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastViewedTab__c</fullName>
        <label>LastViewedTab</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Age__c</fullName>
        <description>Calculates how long since the last activity logged on this account.</description>
        <formula>IF( LastActivityDate != Null, Today()- LastActivityDate , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Age_v2__c</fullName>
        <formula>TODAY()- LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Age v2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Email__c</fullName>
        <description>This field is only for ATG Business Admin and System Admin purposes/use.  It is not visible to other users.</description>
        <label>Last Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_In_Person__c</fullName>
        <description>field to capture the last in person on the Account</description>
        <label>Last In Person</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Inbound_Call__c</fullName>
        <description>This field is only for ATG Business Admin and System Admin purposes/use.  It is not visible to other users.</description>
        <label>Last Inbound Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Online_Meeting__c</fullName>
        <description>This field is only for ATG Business Admin and System Admin purposes/use.  It is not visible to other users.</description>
        <label>Last Online Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Outbound_Call__c</fullName>
        <description>field to capture the last outbound call on the Account</description>
        <label>Last Outbound Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Service__c</fullName>
        <description>This field is only for ATG Business Admin and System Admin purposes/use.  It is not visible to other users.</description>
        <label>Last Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Task__c</fullName>
        <description>This field is only for ATG Business Admin and System Admin purposes/use.  It is not visible to other users.</description>
        <label>Last Task</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Update_by_SVOC__c</fullName>
        <description>this field is populated by the integration to SVOC when the last request to SVOC was processed</description>
        <inlineHelpText>this field is populated by the integration to SVOC when the last request to SVOC was processed</inlineHelpText>
        <label>Last Update by SVOC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Billing_Address_Same__c</fullName>
        <description>mapped from the lead. If NO, then the lead billing address info will populate with workflow to the account billing address</description>
        <inlineHelpText>mapped from the lead.  If NO, then the lead billing address info will populate with workflow to the account billing address</inlineHelpText>
        <label>Lead Billing Address Same as Physical?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Billing_City__c</fullName>
        <description>used for mapping the lead billing city into the account</description>
        <inlineHelpText>used for lead mapping</inlineHelpText>
        <label>Lead Billing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Billing_State__c</fullName>
        <description>used for mapping the lead billing state to the account</description>
        <inlineHelpText>for lead mapping</inlineHelpText>
        <label>Lead Billing State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Billing_Street__c</fullName>
        <description>used for mapping the lead billing street into the account</description>
        <inlineHelpText>used for lead mapping</inlineHelpText>
        <label>Lead Billing Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Billing_Zip__c</fullName>
        <description>used for mapping the lead billing zip to the account billing zip</description>
        <inlineHelpText>used to hold billing info from Lead</inlineHelpText>
        <label>Lead Billing Zip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <description>Picklist used to select the original lead source of the account.</description>
        <label>Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>20 Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement - Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement - Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATC – 20 Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATC Teaser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction Genius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoTrader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoTrader Major Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call in - ATC Directed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Editorial / Press Coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harvest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migrated Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show or Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website - ATC Directed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website – Stocking Teaser</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>